0025981: Wrong result obtained by projection algorithm.

Adjust periodic added.

processing of V parameter periodicity added.

Test case for issue CR25981